feat created main body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>AI Chart Dashbaord</title>
 </head>
 <body>
-    Hello World!
+    <div class="main-body">
+        <div class="sidebar">
+            <ul>
+                <li>Home</li>
+                <li>View full Chart</li>
+                <li>My Portfolio</li>
+                <li>News</li>
+            </ul>
+        </div>
+        
+    </div>
     
 </body>
 </html>
