feat added logo in sidebar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <div class="main-body">
         <div class="sidebar">
+            <div class="logo-container">
+                <img  src="./merolagani.png" class="ml-logo">
+            </div>
             <ul>
                 <li> <a href="#">Home</a></li>
                 <li><a href="#">View Full Chart</a></li>
@@ -27,6 +30,12 @@
             <input type="search" name="search" id="search">
             <img src="./search.png" class="search-button">
         </div>
+        <div class="header-text">
+            <h3>AI Chart Dashboard</h3>
+        </div>
+
+
+
 
         
     </div>
