feat: added suggestion board.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,41 @@
             <img class="bar" src="Images/Chart.png">
         </div>
 
+        <div class="suggestion">
+            <p>Based On Your Portfolio</p><br>
+            <div class="board">
+                GBIME <br>
+                <img src="Images/Polygon 1.png">789.56<br><br>
+                AI Suggestion <br>
+                Wait and Watch <br>
+                Hold
+            </div>
+
+            <div class="board">
+                GBIME <br>
+                <img src="Images/Polygon 1.png">789.56<br><br>
+                AI Suggestion <br>
+                Wait and Watch <br>
+                Hold
+            </div>
+
+            <div class="board">
+                GBIME <br>
+                <img src="Images/Polygon 1.png">789.56<br><br>
+                AI Suggestion <br>
+                Wait and Watch <br>
+                Hold
+            </div>
+            
+            <div class="board">
+                GBIME <br>
+                <img src="Images/Polygon 1.png">789.56<br><br>
+                AI Suggestion <br>
+                Wait and Watch <br>
+                Hold
+            </div>
+        </div>
+
     </div>
     
 </body>
