--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>AI Chart Dashbaord</title>
 </head>
 <body>
-    Hello World!
+    <div class="main-container">
+        <div class="side-nav">
+            <ul>
+                <li><a href ="#">Home</a></li>
+                <li><a href ="#">View Full Chart</a></li>
+                <li><a href= "#">My Portfolio</a></li>
+                <li><a href ="#">News</a></li>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
