--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href ="#">News</a></li>
             </ul>
         </div>
+        <div class="nepse-card"></div>
     </div>
     
 </body>
