style : changed padding acording to design

--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
         </ul>
     </div>
     <div class="main-body">
+        <div class="FHead">
+            <p>Stats Summary</p>
+        </div>
         <div class="barChart">
-            <p>Stats Summary add</p>
             <button>Tap to Buy</button>
             <button>Tap to Hold</button>
             <button>Tap to Sell</button><br><br>
             <img class="bar" src="Images/Chart.png">
         </div>
 
+        <div class="FHead">
+            <p>Based On Your Portfolio</p>
+        </div>
+
         <div class="suggestion">
-            <p>Based On Your Portfolio</p><br>
             <div class="board1">
                 GBIME <br>
                 <img src="Images/Polygon 1.png">789.56<br><br>
@@ -67,8 +72,8 @@
         </div>
 
         <div class="mktTrend">
-            Market Trend
-            <img class="chart" src="Images/TrendChart.png"
+            <p>Market Trend</p><br><br>
+            <img class="chart" src="Images/TrendChart.png">
         </div>
     </div>
 </body>
