feat: made responsive for tablets

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <div class="main-body">
-        <div class="FHead">
+        <div class="header-text">
             <p>Stats Summary</p>
         </div>
         <div class="barChart">
@@ -33,7 +33,7 @@
             <img class="bar" src="Images/Chart.png">
         </div>
 
-        <div class="FHead">
+        <div class="header-text">
             <p>Based On Your Portfolio</p>
         </div>
 
